# Team02-JetRacer

./: .gitignore  .gitmodules  CMakeLists.txt
CarController/: CMakeLists.txt
CarController/tests/unit/: I2CTest.cpp
CarController/tests/unit/mocks/: MockI2C.h  MockPCA9685.h
MiddleWare/BatterySensor/src/: BatterySensor.cpp
MiddleWare/Signals/src/: Signals.cpp
XboxController/src/: XboxController.cpp
ZenohConfig/: ControllerConfig.json  MiddleWareConfig.json  VehicleSystemConfig.json
cmake/: CodeCoverage.cmake
config/Systemd/: controller.service  middleware.service  vehiclesystem.service
config/Zenoh/: ControllerConfig.json  MiddleWareConfig.json  VehicleSystemConfig.json
deploy/dockerfiles/: DockerFileJetson  DockerfileDeployJetson
deploy/scripts/: deployToJetson.sh
include/: Type.hpp  Vehicle.hpp
include/ADAS/: ADAS.hpp  ObstacleDetection.hpp
include/Body/: Body.hpp  Lights.hpp
include/Chassis/: Accelerator.hpp  Axle.hpp  Brake.hpp  Chassis.hpp  ChassisSteeringWheel.hpp  SteeringWheel.hpp
include/Communication/: ControllerPublisher.hpp  SensoringPublisher.hpp  VSSPublisher.hpp  VSSQueryable.hpp  VSSSubscriber.hpp  XboxControllerPublisher.hpp
include/Controllers/: IVehicleController.hpp  XboxController.hpp
include/Hardware/: HardwareObserver.hpp  MotorController.hpp  ServoController.hpp  VehicleActuator.hpp
include/MiddleWare/BatterySensor/: BatterySensor.hpp
include/MiddleWare/Signals/: Signals.hpp
include/Powertrain/: ElectricMotor.hpp  Powertrain.hpp  TractionBattery.hpp  Transmission.hpp
include/Vehicle/: Acceleration.hpp  AngularVelocity.hpp  Connectivity.hpp  Exterior.hpp  IVehicleObserver.hpp  Vehicle.hpp  VehicleFactory.hpp  VehicleSystem.hpp
include/Vehicle/MotionManagement/: ElectricAxle.hpp  MotionManagement.hpp  Steering.hpp  SteeringWheel.hpp
src/: control.cpp  main.cpp  middleware.cpp  vehicle.cpp
src/ADAS/: ADAS.cpp  ObstacleDetection.cpp
src/Body/: Body.cpp  Lights.cpp
src/Chassis/: Accelerator.cpp  Axle.cpp  Brake.cpp  Chassis.cpp  ChassisSteeringWheel.cpp  SteeringWheel.cpp
src/Communication/: ControllerPublisher.cpp  SensoringPublisher.cpp  VSSPublisher.cpp  VSSQueryable.cpp  VSSSubscriber.cpp  XboxControllerPublisher.cpp
src/Controllers/: XboxController.cpp
src/Hardware/: HardwareObserver.cpp  MotorController.cpp
src/MiddleWare/BatterySensor/: BatterySensor.cpp
src/MiddleWare/Signals/: Signals.cpp
src/Powertrain/: ElectricMotor.cpp  Powertrain.cpp  Transmission.cpp
src/Vehicle/: Acceleration.cpp  AngularVelocity.cpp  Connectivity.cpp  Exterior.cpp  Vehicle.cpp  VehicleSystem.cpp
src/Vehicle/MotionManagement/: ElectricAxle.cpp  MotionManagement.cpp  Steering.cpp  SteeringWheel.cpp
tests/ADAS/: ADASTests.cpp  ObstacleDetectionTests.cpp
tests/Body/: BodyTests.cpp  LightsTests.cpp
tests/Chassis/: AcceleratorTests.cpp  AxleTests.cpp  BrakeTests.cpp  ChassisSteeringWheelTests.cpp  ChassisTests.cpp
tests/Communication/: ControllerPublisherTests.cpp  SensoringPublisherTests.cpp  VSSQueryableTests.cpp  VSSSubscriberTests.cpp
tests/Controllers/: MockFunctions.cpp  XboxControllerTests.cpp
tests/Hardware/: ServoController.cpp
tests/Powertrain/: ElectricMotorTests.cpp  PowertrainTests.cpp  TractionBatteryTests.cpp  TransmissionTests.cpp
tests/Vehicle/: AccelerationTests.cpp  AngularVelocityTests.cpp  ConnectivityTests.cpp  ExteriorTests.cpp  VehicleSystemTests.cpp  VehicleTests.cpp
tests/Vehicle/MotionManagement/: ElectricAxleTests.cpp  MotionManagementTests.cpp  SteeringTests.cpp  SteeringWheelTests.cpp
vss/: VehicleSignalSpecification.vspec  tree
vss/ADAS/: ADAS.vspec
vss/Body/: Body.vspec
vss/Chassis/: Chassis.vspec  Wheel.vspec
vss/Powertrain/: ElectricMotor.vspec  Powertrain.vspec  TractionBattery.vspec  Transmission.vspec
vss/Vehicle/: Battery.vspec  MotionManagement.vspec  Vehicle.vspec
vss/Vehicle/MotionManagement/: ElectricAxle.vspec  Steering.vspec
vss/Vehicle/MotionManagement/Steering/: SteeringWheel.vspec
